[package]
name = "solana-keypair-transform"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"]}
solana-sdk = "2.1.7"
regex = "1.11.1"

[profile.dev]
opt-level = 0
lto = "off"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
debug = false
strip = true
