[package]
name = "solana-keypair-transform"
version = "0.2.0"
edition = "2021"

[dependencies]
bs58 = "^0.5.1"
clap = { version = "4.5.23", default-features = false, features = ["derive", "std"] }
ed25519-dalek = "1.0.1"
once_cell = "1.20.2"
thiserror = "2.0.9"
regex = "1.11.1"

[profile.dev]
opt-level = 0
lto = "off"
panic = "unwind"
debug = true

[profile.release]
opt-level = "z"
lto = "fat"
panic = "abort"
codegen-units = 1
debug = false
strip = true
